# psychic-spoon

Python/Scripts/: Pairing.ipynb  ProbGaussianFit.ipynb  Probabilites.py  Sklearn-1.ipynb  Untitled.ipynb
Python/SurveyEntropy/: .gitignore  DevelTest.ipynb  Psy2-5_prestation.ipynb  Psy2-5_sjalvskattning.ipynb  README.md  prestation_data_clean.csv  prestation_keys.csv  pyproject.toml  sjalvskattning_data_clean.csv  sjalvskattning_keys.csv
Python/SurveyEntropy/.ipynb_checkpoints/: Psy2-5_prestation-checkpoint.ipynb  Psy2-5_sjalvskattning-checkpoint.ipynb
Python/SurveyEntropy/Data/: Dataset_clean_n111.csv
Python/SurveyEntropy/examples/: pilot_total_entropy.py
Python/SurveyEntropy/openspec/: config.yaml
Python/SurveyEntropy/openspec/changes/total-score-entropy/: design.md  proposal.md  tasks.md
Python/SurveyEntropy/openspec/changes/total-score-entropy/specs/item-polarity/: spec.md
Python/SurveyEntropy/openspec/changes/total-score-entropy/specs/survey-dataset/: spec.md
Python/SurveyEntropy/openspec/changes/total-score-entropy/specs/total-score-entropy/: spec.md
Python/SurveyEntropy/src/: 01_Framing_IRT_and_Critique.md  SurveysHistogram.md  Toy_example.md
Python/SurveyEntropy/src/surveyentropy/: __init__.py  dataset.py  entropy.py  polarity.py  totalscore.py
Python/SurveyEntropy/studies/: small_n_estimator_bias.md  small_n_estimator_bias.py
Python/SurveyEntropy/tests/: test_dataset.py  test_entropy.py  test_polarity.py  test_totalscore.py
