[project]
name = "surveyentropy"
version = "0.1.0"
description = "Monte Carlo subset selection of Likert items maximizing total-score entropy and item-total consistency"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.9"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surveyentropy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
